--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,8 @@
   },
   "include": [
     "next-env.d.ts",
+    "src/types/**/*.ts",
+    "src/types/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
